[package]
name = "fsproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = { version = "4.0", features = ["derive"] }
http = "1.0.0"
http-body-util = "0.1.0"
hyper = { version = "1.0", features = ["full"] }
pin-project-lite = "0.2.13"
tokio = { version = "1.26", features = ["full"] }
